ATLAS-39: Add filter for bo in backend